public/assets/styles/custom.css
:root {
    --primary-background: #131720;
    --secondary-background: #1c212d; 
    --color-standard: #a5abbb;
    --highlight: #37bcf8;
}

html{
    scroll-behavior: smooth;
}

body{
    background: var(--primary-background);
    font-family: 'Roboto', sans-serif;
    font-weight: 300;
    counter-reset: section;
}

.preload * {
    -webkit-transition: none !important;
    -moz-transition: none !important;
    -ms-transition: none !important;
    -o-transition: none !important;
    transition: none !important;
}

.mono{
    font-family: 'Roboto Mono', monospace;
    word-spacing: -2px;
}

.poppins{
    font-family: 'Poppins', sans-serif;
}

.process-color-card{
    height: 100px;
}

a, a:hover{
    -webkit-transition: all 0.25s ease-in-out;
    transition: all 0.25s ease-in-out;
}

.logo:hover{
    -webkit-box-shadow: inset 0 -38px 0 0 var(--highlight);
    box-shadow: inset 0 -38px 0 0 var(--highlight);
    color: var(--primary-background);
    -webkit-transition: all 0.25s ease-in-out;
    transition: all 0.25s ease-in-out;
}


footer .contact{
    -webkit-transition: all 0.4s ease-in-out;
    transition: all 0.4s ease-in-out;
}

footer .contact:hover{
    -webkit-box-shadow: inset 500px 0 0 var(--highlight);
    box-shadow: inset 500px 0 0 var(--highlight);
    color: var(--primary-background);
    -webkit-transition: all 0.4s ease-in-out;
    transition: all 0.4s ease-in-out;
}

header a.email{
    -webkit-box-shadow: inset 0 -3px 0 var(--highlight);
    box-shadow: inset 0 -3px 0 var(--highlight);
    padding: 6px 0px;
    color: #fff;
    -webkit-transition: all 0.25s ease-in-out;
    transition: all 0.25s ease-in-out;
}

header a.email:hover{
    -webkit-box-shadow: inset 0 -38px 0 0 var(--highlight);
    box-shadow: inset 0 -38px 0 0 var(--highlight);
    color: var(--primary-background);
    -webkit-transition: all 0.25s ease-in-out;
    transition: all 0.25s ease-in-out;
}

.main-nav li a{
    color: #9ca3af;
    font-weight: 500;
    padding: 0;
    text-decoration: none;
    border-bottom: 2px solid transparent;
    margin: 0 0.5rem;
    transition: padding 0.25s, border 0.25s;
}

.main-nav li a:hover{
    transition: all 0.25s ease-in-out;
    color: #fff;
    padding: 0 0 5px;
    border-color: #0f9edf;
}

.main-nav li a.active{
    color: #fff;
}

::selection{
    background: var(--highlight);
    color: var(--primary-background);
}

::-moz-selection{
    background: var(--highlight);
    color: var(--primary-background);
}

select {
    background-image: url('../images/icons/carat.svg');
    background-position: right 0.5rem center;
    background-repeat: no-repeat;
    background-size: 1.5em 1.5em;
    padding-right: 2.5rem;
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
    overflow: visible !important;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
}

a:hover{
    -webkit-transition: all .2s ease-in-out;
    transition: all .2s ease-in-out;
}

a[type="button"],
[type="submit"]{
    -webkit-transition: all 0.25s ease-in-out;
    transition: all 0.25s ease-in-out; 
}

a[type="button"]:hover,
[type="submit"]:hover{
    -webkit-box-shadow: inset 140px 0 0 var(--highlight);
    box-shadow: inset 140px 0 0 var(--highlight);
    color: var(--primary-background);
    background: initial !important;
    -webkit-transition: all 0.25s ease-in-out;
    transition: all 0.25s ease-in-out; 
}

.link{
    font-weight: bold;
/*     transition: 0.25s;    */
    border-bottom: 2px solid transparent;
}

.link:hover{
    transition: 0.25s;
    border-bottom: 2px solid;
}

.nav-social{
    width: 40px;
    position: fixed;
    bottom: 0px;
    left: 40px;
    right: auto;
    z-index: 10;
    color: #9ca3af;
    font-size: 20px;
}

.nav-social::after{
    content: "";
    display: block;
    width: 2px;
    height: 120px;
    margin: 0px auto;
    background-color: #5e646e;
}

.nav-social a.icon{
    padding: 0px 10px 25px 10px;
    
    box-sizing: border-box;
    display: block;
}

.nav-social a.icon:hover{
    color: var(--highlight);
    transition: 0.25s;
}

.tag{
    color: var(--highlight);
    border: 1px solid;
    border-radius: 4px;
    display: inline-block;
    padding: 2px 6px 3px 6px;
    font-size: 12px;
}

a.arrow-link span,
a.arrow-link:hover span,
.project,
.project:hover{
    -webkit-transition: all .2s ease-in-out;
    transition: all .2s ease-in-out;
}

.project-link::before{
    content: "";
    display: block;
    position: absolute;
    z-index: 0;
    width: 100%;
    height: 100%;
    top: 0px;
    left: 0px;
}

.line-spacing{
    line-height: 1.6;
}

.line-spacing-sm{
    line-height: 1.4;
}

.filter-nav-item{
    color: #9ca3af;
}

.filter-nav-item:hover{
    color: #e4e7eb;
    background: var(--secondary-background);
}

.filter-nav-item-active,
.filter-nav-item-active:hover{
    color: var(--highlight);
    background: var(--secondary-background);
}

#projects td.limited{
    max-width: 250px;
}
#projects tbody tr{
    transition: background 0.25s;
}
#projects tbody tr:hover{
    background: var(--secondary-background);
    transition: background 0.25s;
}

.bg-primary{
    background: var(--primary-background);
}

.bg-blobs{
    background:url("../images/blob1.svg");
    background-size:cover;
    background-position:center;
    background-repeat:no-repeat;
}

.text-standard{
    color: var(--color-standard);
}

.border-standard{
    border-color: var(--color-standard);
}

.text-primary,
.hover\:text-primary:hover,
.group:hover .group-hover\:text-primary {
    color: var(--primary-background);
}

.bg-topography{
    background-color: var(--primary-background);
    background-image: url("../images/topography.svg");
}

ul.list-disc li::marker{
    color: var(--highlight);
}

.list-arrow{
    padding-left: 8px;
}

ul.list-arrow li::marker{
    content: "\21B3 ";
    font-size: 20px;
    padding-right: 5px;
}

.bg-secondary{
    background: var(--secondary-background);
}

.hanging-indent{
    padding-left: 36px;
    text-indent: -36px
}

figure.image figcaption::before {
    content: "[↑]";
    display: inline-block;
    margin-right: 10px;
}

.project-slider{
    display: flex;
    overflow-x: scroll;
    scroll-snap-type: x mandatory;
}
.project-slider::-webkit-scrollbar {
    height: 10px;
}

.project-slider::-webkit-scrollbar-track {
    background: #1f2937;
    border-radius: 10px;
}

.project-slider::-webkit-scrollbar-thumb {
    border-radius: 10px;
    background: var(--highlight); 
}

.project-slider-img{
    position: relative; 
    display: flex; 
    flex-shrink: 0; 
    justify-content: center; 
    align-items: center; 
    width: 100%; 
    height: auto; 
    border-radius: 10px; 
    scroll-snap-align: start;
}

.project-toc{
    position: sticky;
    overflow: auto;
    top: 2rem;
    max-height: calc(100vh - 8.5rem);
    margin-left: auto;
    scroll-margin-top: 2.5rem;
}

.project-toc-link.active{
    color: var(--highlight)
}

.bold-header{
    font-size: 170px;
    color: #1f2937;
    left: -75px;
}

.bold-header.name{
    top: -10px;
}

.bold-header.about{
    top: -155px;
}

.bold-header.work{
    top: -65px;
}

.bold-header.tools{
    top: -160px;
}

textarea{
    min-height: 150px;
}

.skill-title{
    font-size: 12px;
    font-weight: normal;
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #374151;
    color: #fff;
    padding: 0.3rem 0.7rem;
    border-radius: 0.5rem;
    top: -15px;
    left: -14px;
    -webkit-transform: rotate(-10deg) scale(0);
    transform: rotate(-10deg) scale(0);
    -webkit-transition: -webkit-transform .2s ease-in-out;
    transition: transform .2s ease-in-out, -webkit-transform .2s ease-in-out;
}

.group:hover .skill-title{
    -webkit-transform: rotate(-10deg) scale(1);
    transform: rotate(-10deg) scale(1);
}

@media (min-width: 2000px){
    .max-w-6xl{
        max-width: 100rem !important;
    }
}

@media (max-width: 1500px){
    .section-heading:before{
        display: none;
    }
}
@media (max-width: 1400px){
    footer{
        padding-left: 40px;
        padding-right: 40px;
    }
    .nav-social{
        position: relative;
        left: initial;
        text-align: center;
        bottom: initial;
        width: initial;
        margin-top: 35px;
    }
    .nav-social a.icon {
        display: inline-block;
    }
     .nav-social a.icon:hover {
        transform: none !important;
        --tw-translate-y: none !important;
    }
    .nav-social:after{
        background-color: initial;
    height: 0;}
    section, header, nav{
        padding-left: 35px;
        padding-right: 35px;
    }
}

